fix z-index of context menu

--- a/frontend/stylesheets/trace_view/_tracing_view.less
+++ b/frontend/stylesheets/trace_view/_tracing_view.less
@@ -134,7 +134,7 @@
 }
 
 .node-context-menu {
-  z-index: 100;
+  z-index: 1000;
   border-radius: 6px;
   color: @text-color;
   background: @component-background;
